users owns their rank
