# src/flaskr/models/user_model.py
@@ -2,16 +2,18 @@ from marshmallow import Schema, fields, post_load
 
 
 class User(object):
-    def __init__(self, username):
+    def __init__(self, username, rank):
         self.username = username
+        self.rank = rank
 
 
     def __repr__(self):
-        return f"User(username={self.username})"
+        return f"User(username={self.username}, rank={self.rank})"
     
 
 class UserSchema(Schema):
     username = fields.Str(required=True)
+    rank = fields.Int(required=True)
 
     @post_load
     def make_user(self, data, **kwargs):
